--- a/5-onboard-with-tap/Views/Employee/RegisterNewHire.cshtml
+++ b/5-onboard-with-tap/Views/Employee/RegisterNewHire.cshtml
@@ -1,6 +1,24 @@
 ﻿@{
     ViewData["Title"] = "Register New Hire";
+
+    var claims = ViewData["userProfile"] as List<OnboardWithTAP.Models.NewHireProfileClaim>;
+    }
+    @if (claims != null)
+    {
+        foreach (var claim in claims)
+        {
+            <tr>
+                <td style="text-align: left">@claim.Label</td>
+                <td style="text-align: left">
+                    <input id="@claim.InternalName" name="@claim.InternalName"
+                        style="width:300px" type="@claim.Type" value="@claim.Value"
+                        placeholder="@claim.Placeholder" @(claim.ReadOnly ? "readonly" : "") />
+                </td>
+            </tr>
+        }
+
 }
+
 <div class="text-center">
     <h1 class="display-4">Register a New Hire</h1>
 
